# Books

./: Cargo.toml  README.md
ch2/: pthreads.c  t.rs  volatile.asm  x86.asm
src/: main.rs
src/atomic/: atomic.md  mod.rs
src/atomic/ch1/: ch1.md  mod.rs
src/atomic/ch10/: ch10.md  mod.rs
src/atomic/ch2/: ch2.md  ch2_1.rs  ch2_2.rs  mod.rs
src/atomic/ch3/: ch3.md  ch3_3.rs  ch3_4.rs  ch3_5.rs  ch3_7.rs  ch3_8.rs  mod.rs
src/atomic/ch4/: ch4.md  ch4_1.rs  ch4_2.rs  ch4_3.rs  mod.rs
src/atomic/ch5/: ch5.md  ch5_1.rs  ch5_2.rs  ch5_3.rs  ch5_3_upgrade.rs  ch5_4.rs  ch5_6.rs  mod.rs
src/atomic/ch6/: ch6.md  ch6_1.rs  ch6_2.rs  ch6_3.rs  mod.rs
src/atomic/ch7/: ch7.md  ch7_1.rs  ch7_2.rs  ch7_4.rs  mod.rs
src/atomic/ch8/: ch8.md  ch8_2.rs  ch8_3.rs  mod.rs
src/atomic/ch9/: ch9.md  ch9_1.rs  ch9_2.rs  ch9_3.rs  mod.rs
src/ch3/: 3_17.rs  Condvar_3_8_2.rs  barrier_3_8_4.rs  mod.rs  mutex_3_8.rs  rw_lock_3_8_3.rs  semaphore_3_8_5.rs
src/computational_finance/: mod.rs
src/computational_finance/ch1/: mod.rs
src/concurrency/: mod.rs
src/deep_learning_math/: ch2.rs  ch3.rs  mod.rs
src/easy_rust/: mod.rs
src/easy_rust/ch1/: mod.rs
src/easy_rust/ch2/: mod.rs
src/easy_rust/ch3/: mod.rs
src/easy_rust/ch5/: mod.rs
src/easy_rust/ch7/: mod.rs
src/easy_rust/ch8/: mod.rs
src/financial_engineering/: financial_engineering.md  mod.rs
src/financial_engineering/ch1/: ch1_1.rs  ch1_2.rs  mod.rs
src/financial_engineering/ch5/: ch5_1.rs  ch5_3.rs  mod.rs
src/financial_engineering/ch7/: ch7_1.rs  ch7_2.rs  ch7_3.rs  ch7_4.rs  ch7_5.rs  ch7_6.rs  mod.rs  (+2 more)
(+12 files in other folders)
