[package]
name = "ConcurrentProgramming"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atomic-wait = "1.1.0"
libc = "0.2.169"
rand_distr = "0.5.0"
rand = "0.9.0"
ndarray = "0.16.1"
polars = { version = "0.46.0", features = ["ndarray","to_dummies","lazy","describe","strings","list_count","describe","cov","log","rolling_window"] }
plotters = { version = "0.3.7", default-features = false, features = ["bitmap_backend", "area_series","line_series","all_elements"] }

